--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- i kinda suck at html so dont expect good website!! -->
+<!-- i kinda suck at html so dont expect good website!! 1 -->
 
 <!DOCTYPE html>
 <html>
