--- a/index.html
+++ b/index.html
@@ -9,5 +9,16 @@
   <body style="background-color:#00FF14;">
     <center><h1>Joke Bambi</h1>
       welcome to bamb' site</center>
+
+    <script>
+      var warntext1 = "woah woah woah!"
+      var warntext2 = "if someone told you to copy and paste something here or somewhere dont! it may get you hacked!"
+
+      // warning incase!!!!!
+      console.warn(warntext1)
+      console.warn(warntext2)
+      // warning because this commonly happens
+    </script>
+    
   </body>
 </html>
