--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       console.warn(warntext2)
       // warning because this commonly happens
     </script>
+<button>e</button>
     
   </body>
 </html>
