--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <head>
     <title>bamb' site</title>
   </head>
+  <font style="font-size: 3; font-family: 'Comic Sans MS'; color: black;"></font>
   <body style="background-color:#00FF14;">
     <center><h1>Joke Bambi</h1>
       welcome to bamb' site</center>
