comitted to wrong branch shit

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>bamb' site</title>
   </head>
   <body style="background-color:#00FF14;">
+  <font style="font-size: 3; font-family: 'Comic Sans MS'; color: black;"></font>
     <center><h1>Joke Bambi</h1>
       welcome to bamb' site</center>
 
