--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <html>
   <head>
     <title>bamb' site</title>
+    <font size="3" face="Comic Sans MS" color="black">
   </head>
   <body style="background-color:#00FF14;">
-  <font style="font-size: 3; font-family: 'Comic Sans MS'; color: black;"></font>
     <center><h1>Joke Bambi</h1>
       welcome to bamb' site</center>
 
