--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body style="background-color:#00FF14;">
     <center><h1>Joke Bambi</h1>
-      welcome to bamb' site</center>
+      welcome to bamb' site
+      bambi headquarters /j 2023</center> <!-- joke -->
 
     <script>
       var warntext1 = "woah woah woah!"
