--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <font size="3" face="Comic Sans MS" color="black">
   </head>
   <body style="background-color:#00FF14;">
-    <center><h1>Joke Bambi</h1>
-      welcome to bamb' site
-      bambi headquarters /j 2023</center> <!-- joke -->
+    <center><h1>Joke Bambi</h1></center> 
+      <center>welcome to bamb' site</center> 
+      <center>bambi headquarters /j 2023</center> <!-- joke -->
 
     <script>
       var warntext1 = "woah woah woah!"
