--- a/404.html
+++ b/404.html
@@ -1,3 +1,4 @@
+<title>404 oh no</title>
 <h1>oh shit</h1>
 it seems like you got to a page that doesnt even exist
 to go back uhh click this <a href="https://jokebambi.github.io/JokeBambi">here</a>
